# knowledge_suturo_1718

./: .gitignore  .gitmodules  README.md
knowledge/beliefstate/: CMakeLists.txt  package.xml  setup.py
knowledge/beliefstate/launch/: beliefstate.launch  knowledge_beliefstate_service.launch  pr2.launch  spawn_jamilch_gazebo.launch  spawn_kellogstoppasmini_gazebo.launch  test.launch
knowledge/beliefstate/owl/: catalog-v001.xml  suturo_actions.owl
knowledge/beliefstate/prolog/: beliefstate.pl  init.pl
knowledge/beliefstate/scripts/: beliefstate.py
knowledge/beliefstate/src/: beliefstate.cpp  beliefstate_service.cpp  empty_gripper.cpp  grasp_object.cpp  hela_curry_ketchup_drop_object.cpp  hela_curry_ketchup_grasp_object.cpp  hela_curry_ketchup_perceive_object.cpp  ja_milch_drop_object.cpp  ja_milch_grasp_object.cpp  ja_milch_perceive_object.cpp  ja_milch_side_grasp_object.cpp  ja_milch_top_grasp_object.cpp  kellogs_toppas_mini_drop_object.cpp  kellogs_toppas_mini_grasp_object.cpp  kellogs_toppas_mini_perceive_object.cpp  koelln_muesli_knusper_honig_nuss_drop_object.cpp  koelln_muesli_knusper_honig_nuss_grasp_object.cpp  koelln_muesli_knusper_honig_nuss_perceive_object.cpp  perceive_object.cpp
knowledge/beliefstate_handler/: CMakeLists.txt  package.xml
knowledge/beliefstate_handler/prolog/: init.pl
knowledge/beliefstate_handler/src/: beliefstate_service.cpp  test_client.cpp
knowledge/kitchen_model_export/: CMakeLists.txt  package.xml
knowledge/kitchen_model_export/launch/: knowledge_export_service.launch  knowledge_export_service_without_uploading_kitchen.launch  knowledge_upload_iai_kitchen.launch  test.launch
knowledge/kitchen_model_export/owl/: room.owl
knowledge/kitchen_model_export/prolog/: init.pl  kitchen_model_exporter.pl
knowledge/kitchen_model_export/src/: kitchen_model_service.cpp  test_client.cpp
knowledge/knowledge/: CMakeLists.txt  package.xml
knowledge/knowledge/launch/: knowledge_main.launch  knowledge_main_real_robot.launch  knowledge_main_real_robot_hack.launch
knowledge/knowledge/owl/: catalog-v001.xml  suturo_object.owl
knowledge/knowledge/prolog/: init.pl
knowledge/knowledge/src/: interactiv_marker.cpp  marker.cpp  prolog_util.cpp
knowledge/knowledge_common/: CMakeLists.txt  package.xml
knowledge/knowledge_common/include/knowledge_common/: prolog_util.h
knowledge/knowledge_common/meshes/Gripper/: Gripper.stl
knowledge/knowledge_common/meshes/HelaCurryKetchup/: HelaCurryKetchup.dae
knowledge/knowledge_common/meshes/JaMilch/: JaMilch.dae  model.config  model.sdf
knowledge/knowledge_common/meshes/KellogsToppasMini/: KellogsToppasMini.dae  model.config  model.sdf
knowledge/knowledge_common/meshes/PringlesSalt/: PringlesSalt.dae
knowledge/knowledge_common/meshes/TomatoSauceOroDiParma/: TomatoSauceOroDiParma.dae
knowledge/knowledge_common/meshes/pringles_paprika/: pringles_paprika.dae
knowledge/knowledge_common/owl/: catalog-v001.xml  suturo_object.owl
knowledge/knowledge_common/prolog/: init.pl  knowledge_util.pl
knowledge/knowledge_common/src/: prolog_util.cpp
knowledge/knowledge_grasp/: CMakeLists.txt  package.xml
knowledge/knowledge_grasp/launch/: knowledge_grasp.launch
knowledge/knowledge_grasp/prolog/: init.pl  knowledge_grasp.pl
knowledge/knowledge_grasp/src/: knowledge_grasp_service.cpp  test_client.cpp
knowledge/knowledge_grasp_verify/: CMakeLists.txt  package.xml
knowledge/knowledge_grasp_verify/launch/: knowledge_grasp_verify.launch
knowledge/knowledge_grasp_verify/prolog/: init.pl  knowledge_grasp.pl
knowledge/knowledge_grasp_verify/src/: knowledge_grasp_verification.cpp
knowledge/map_tf_listener/: CMakeLists.txt  CMakeLists.txt~  map_tf_listener.cpp  package.xml  package.xml~
knowledge/map_tf_listener/launch/: map_tf_listener.launch  navigation.launch
knowledge/map_tf_listener/src/: map_tf_listener.cpp
knowledge/place_object/: CMakeLists.txt  package.xml
knowledge/place_object/prolog/: init.pl  place_object.pl
knowledge/place_object/scripts/: place_object.py  test_client.py
knowledge/poke_position_calculation/: CMakeLists.txt  package.xml
knowledge/poke_position_calculation/launch/: knowledge_poke_service.launch  poke_service.launch
knowledge/poke_position_calculation/owl/: suturo_object.owl
knowledge/poke_position_calculation/prolog/: init.pl  poke_position_calculator.pl
knowledge/poke_position_calculation/src/: poke_position_service.cpp  test_client.cpp  test_client_left.cpp  test_client_right.cpp  test_marker.cpp
knowledge/semantic_logging/: CMakeLists.txt  package.xml
knowledge/semantic_logging/launch/: knowledge.launch
knowledge/semantic_logging/prolog/: init.pl
knowledge/semantic_logging/src/: logger_service.cpp  logger_test_client.cpp
knowledge/storage_place/: CMakeLists.txt  package.xml
knowledge/storage_place/launch/: storage_place.launch
knowledge/storage_place/owl/: catalog-v001.xml  suturo_storage_place.owl
knowledge/storage_place/prolog/: init.pl  storage_place.pl
knowledge/storage_place/src/: storage_place_service.cpp  test_client.cpp
knowledge/train_svm_classifier/: CMakeLists.txt  package.xml  setup.py
knowledge/train_svm_classifier/data/: svm_model.sav
knowledge/train_svm_classifier/launch/: training.launch
knowledge/train_svm_classifier/scripts/: train_svm.py
knowledge/training_data_generator/: CMakeLists.txt  package.xml  setup.py
knowledge/training_data_generator/config/: controllers.yaml
knowledge/training_data_generator/data/: training_set.sav
knowledge/training_data_generator/launch/: robot_control.launch  robot_description.launch  robot_description2.launch  training.launch  training_data.launch
knowledge/training_data_generator/models/beer/: model.sdf
knowledge/training_data_generator/scripts/: capture_features.py
knowledge/training_data_generator/src/: cloud_transformer.cpp  feature_extractor.cpp  move_pr2_head.cpp
knowledge/training_data_generator/srv/: GetNormals.srv
knowledge/training_data_generator/urdf/: training_data_generator.gazebo.xacro  training_data_generator.urdf.xacro
(+4401 files in other folders)
