<?xml version="1.0"?>
<package>
  <name>knowledge</name>
  <version>0.0.0</version>
  <description>The knowledge package</description>

  <maintainer email="roman@todo.todo">roman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>poke_position_calculation</run_depend>
  <build_depend>poke_position_calculation</build_depend>
  <run_depend>kitchen_model_export</run_depend>
   <build_depend>kitchen_model_export</build_depend>
  <build_depend>json_prolog</build_depend>
  <run_depend>json_prolog</run_depend>
</package>
