<?xml version="1.0"?>
<package>
  <name>map_tf_listener</name>
  <version>0.0.1</version>
  <description>map transform listener and publisher</description>

  <maintainer email="maxbahr@todo.todo">Max</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>knowrob_common</build_depend>
  <run_depend>knowrob_common</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
