<?xml version="1.0"?>
<package>
  <name>place_object</name>
  <version>0.0.0</version>
  <description>The knowledge package</description>

  <maintainer email="max@todo.todo">max</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>knowrob_common</build_depend>
  <run_depend>knowrob_common</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>knowledge_common</build_depend>
  <run_depend>knowledge_common</run_depend>
  <build_depend>json_prolog</build_depend>
  <run_depend>json_prolog</run_depend>
  <build_depend>knowledge_msgs</build_depend>
  <run_depend>knowledge_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>beliefstate</build_depend>
  <run_depend>beliefstate</run_depend>

</package>
