<?xml version="1.0"?>
<package>
  <name>poke_position_calculation</name>
  <version>0.0.0</version>
  <description>The knowledge package</description>

  <maintainer email="roman@todo.todo">roman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>knowrob_common</build_depend>
  <run_depend>knowrob_common</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>object_detection</build_depend>
  <run_depend>object_detection</run_depend>
  <build_depend>json_prolog</build_depend>
  <run_depend>json_prolog</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

</package>
